[package]
name = "ephosh"
version = "0.1.0"
authors = ["Selyatin <selyatinismet@gmail.com>", "Juho <bloatoo@tuta.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
tui = "0.14.0"
termion = "1.5.6"
yaml-rust = "0.4"
clap = "2.33.3"
