[package]
name = "ephosh"
version = "0.1.0"
authors = ["Selyatin <selyatinismet@gmail.com>", "Juho <bloatoo@tuta.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
tui = "0.14.0"
termion = "1.5.6"
is_executable = "1.0.1"
serde_json = "1.0.59"
serde = { features = ["derive"], version = "1.0.117" }
