[package]
name = "ephosh"
version = "0.1.0"
authors = ["Selyatin <selyatinismet@gmail.com>", "Juho <bloatoo@tuta.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
is_executable = "1.0.1"
serde_json = "1.0.59"
serde = { features = ["derive"], version = "1.0.117" }
portable-pty = "0.4.0"
crossterm = "0.19.0"
